--- a/JSB-shoppingmall-code/윤영진/Shop/src/main/resources/application.yml
+++ b/JSB-shoppingmall-code/윤영진/Shop/src/main/resources/application.yml
@@ -1,7 +1,7 @@
+server:
+  port: 8080
 
 spring:
-  application:
-    name: social_server
   datasource:
     url: jdbc:h2:tcp://localhost/~/jpashop
     username: sa
